--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     <!--<script src='/home-assistant-polymer/build/_demo_data_compiled.js'></script>-->
     <!--EXTRA_SCRIPTS-->
     <script src='/home-assistant-polymer/build/core.js'></script>
-    <link rel='import' href='/home-assistant-polymer/src/home-assistant.html' onerror='initError()'>
+    <script type="module" src="/home-assistant-polymer/polymer3/modulizer_out/src/home-assistant.js"></script>
+    <!-- <link rel='import' href='/home-assistant-polymer/src/home-assistant.html' onerror='initError()'> -->
     {% if panel_url -%}
       <link rel='import' href='{{ panel_url }}' async>
     {% endif -%}
